add_executable(HelloCpp HelloCpp.cpp)
add_executable(TestConstructor TestConstructor.cpp)
add_executable(TestDestructor TestDestructor.cpp)
add_executable(TestInherit TestInherit.cpp)
add_executable(TestInitializationList TestInitializationList.cpp)
add_executable(TestVirtual TestVirtual.cpp)
add_executable(TestPureVirtual TestPureVirtual.cpp)
add_executable(TestMultiInherit TestMultiInherit.cpp)
add_executable(TestVirtualInherit TestVirtualInherit.cpp)
add_executable(TestGodBolt TestGodBolt.cpp)
add_executable(TestSingleton TestSingleton.cpp)
add_executable(TestOperator TestOperator.cpp)
add_executable(TestMove TestMove.cpp)
add_executable(TestForward TestForward.cpp)
add_executable(TestCast TestCast.cpp)
add_executable(TestLambda TestLambda.cpp)
add_executable(TestConst TestConst.cpp)
add_executable(TestConstexpr TestConstexpr.cpp)
add_executable(TestAuto TestAuto.cpp)
add_executable(TestDecltype TestDecltype.cpp)
add_executable(TestException TestException.cpp)
add_executable(TestSmartPointer TestSmartPointer.cpp)
add_executable(TestTemplate template/TestTemplate.cpp)
add_executable(TestInline header/TestInlineA.cpp TestInline.cpp)
add_executable(TestLeftValue TestLeftValue.cpp)
add_executable(TestSort stl/TestSort.cpp)

ADD_SUBDIRECTORY(class_layout)
